# vision_blender

./: .gitignore  README.md  README2.md  addon_ground_truth_generation.py
samples/: 0001.npz  README.md  read_data.py
vision_blender_ros/: CMakeLists.txt  README.md  package.xml  setup.py
vision_blender_ros/config/: settings.yaml
vision_blender_ros/launch/: vision_blender_ros.launch
vision_blender_ros/scripts/: vision_blender_create_bag.py
